; ModuleID = '/home/carl/AnghaBench/esp-idf/components/libsodium/port/crypto_hash_mbedtls/extr_crypto_hash_sha256_mbedtls.c_crypto_hash_sha256_update.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/libsodium/port/crypto_hash_mbedtls/extr_crypto_hash_sha256_mbedtls.c_crypto_hash_sha256_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_hash_sha256_update(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @sha256_libsodium_to_mbedtls(i32* %8, i32* %10)
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @mbedtls_sha256_update_ret(i32* %8, i8* %12, i64 %13)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %9, align 4
  store i32 %18, i32* %4, align 4
  br label %22

19:                                               ; preds = %3
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @sha256_mbedtls_to_libsodium(i32* %20, i32* %8)
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %19, %17
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @sha256_libsodium_to_mbedtls(i32*, i32*) #1

declare dso_local i32 @mbedtls_sha256_update_ret(i32*, i8*, i64) #1

declare dso_local i32 @sha256_mbedtls_to_libsodium(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
